2004-09-12  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp (checkDelta): Started to implement the timestep
	adjuster for the transient analysis.

	* integrator.h (class integrator): New class containing all
	of the integration specific things of a circuit object.  The
	circuit object now also inherits the integrator class.

	* circuit.h (class circuit): Removed the analysis argument
	of the init() functionality of each type of analysis.  Changed
	all circuit objects.

2004-09-11  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Started to implement the actual solver.  For
	now only linear components are supported and no integration
	step adaption is made.

	* check_netlist.cpp (definition_available): Added the transient
	analysis to the list of known netlist definitions.

	* circuit.h (class circuit): Added the functionality necessary
	for the transient analysis.  These are save-state variables and
	the integration methods.

	* transient.cpp: Implemented Gear, Euler and trapazoidal
	integration methods.

	* transient.h (class transient): New class implementing some
	transient analysis helpers.

2004-09-10  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.h, trsolver.cpp (class trsolver): New files.  Some
	basic preparations for the transient simulation.

2004-09-09  Stefan Jahn  <stefan@lkcc.org>

	* dcsolver.cpp: New simulation property 'saveAll' used to
	prevent saving all nodes and operating points when subcircuits
	are in place.

2004-09-07  Stefan Jahn  <stefan@lkcc.org>

	* circuit.cpp (voltageSource): New helper function setting
	up an internal voltage source for the MNA.

2004-09-06  Stefan Jahn  <stefan@lkcc.org>

	* acsolver.h (class acsolver): New class implementing
	the AC simulation.

	* eqnsys.h (class eqnsys): Made this class a template
	using the tmatrix template.  Thus the DC analysis runs
	twice as fast (using <nr_double_t> instead of <complex>
	values) and the solvers can also used by other types of
	simulations.
