@@ -42,7 +42,7 @@ qucsator_SOURCES = ucs.cpp circuit.cpp check_netlist.cpp operatingpoint.cpp  \
 	parasweep.cpp equation.cpp evaluate.cpp sweep.cpp acsolver.cpp       \
 	trsolver.cpp transient.cpp integrator.cpp
 
-noinst_TEMPLATES = tmatrix.cpp eqnsys.cpp nasolver.cpp
+noinst_TEMPLATES = tmatrix.cpp eqnsys.cpp nasolver.cpp states.cpp
 
 noinst_HEADERS = $(noinst_TEMPLATES) check_netlist.h complex.h input.h net.h  \
 	tokens_netlist.h dataset.h logging.h node.h property.h vector.h       \
@@ -51,7 +51,7 @@ noinst_HEADERS = $(noinst_TEMPLATES) check_netlist.h complex.h input.h net.h  \
 	nodelist.h variable.h environment.h parasweep.h eqnsys.h sweep.h      \
 	operatingpoint.h libqucsator.h equation.h evaluate.h exception.h      \
 	exceptionstack.h matvec.h constants.h consts.h nasolver.h tmatrix.h   \
-	circuit.h acsolver.h trsolver.h transient.h integrator.h
+	circuit.h acsolver.h trsolver.h transient.h integrator.h states.h
 
 noinst_LIBRARIES = libqucsator.a
 
