@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: integrator.cpp,v 1.1 2004-09-12 14:09:19 ela Exp $
+ * $Id: integrator.cpp,v 1.2 2004-09-12 18:10:21 ela Exp $
  *
  */
 
@@ -38,86 +38,20 @@
 #define STATE_MASK  7
 
 // Constructor creates an unnamed instance of the integrator class.
-integrator::integrator () {
+integrator::integrator () : states<nr_double_t> () {
   coefficients = NULL;
   order = 0;
-  states = 0;
-  currentstate = 0;
-  stateval = NULL;
   integrate_func = NULL;
 }
 
 /* The copy constructor creates a new instance based on the given
    integrator object. */
-integrator::integrator (const integrator & c) {
+integrator::integrator (const integrator & c) : states<nr_double_t> (c) {
   coefficients = c.coefficients;
   order = c.order;
-  states = c.states;
-  currentstate = c.currentstate;
-  coefficients = c.coefficients;
   integrate_func = c.integrate_func;
-
-  // copy state variables if necessary
-  if (states && c.stateval) {
-    int size = states * sizeof (nr_double_t) * STATE_NUM; 
-    stateval = (nr_double_t *) malloc (size);
-    memcpy (stateval, c.stateval, size);
-  }
-  else stateval = NULL;
 }
 
 // Destructor deletes a integrator object.
 integrator::~integrator () {
-  if (stateval) free (stateval);
-}
-
-/* The function allocates and initializes memory for the save-state
-   variables. */
-void integrator::initStates (void) {
-  if (stateval != NULL) free (stateval);
-  if (states) {
-    stateval = (nr_double_t *)
-      calloc (states, sizeof (nr_double_t) * STATE_NUM);
-  }
-  currentstate = 0;
-}
-
-// Clears the save-state variables.
-void integrator::clearStates (void) {
-  if (states && stateval)
-    memset (stateval, 0, states * sizeof (nr_double_t) * STATE_NUM);
-  currentstate = 0;
-}
-
-/* The function returns a save-state variable at the given position.
-   Higher positions mean earlier states.  By default the function
-   returns the current state of the save-state variable. */
-nr_double_t integrator::getState (int state, int n) {
-  int i = (n + currentstate) & STATE_MASK;
-  return stateval[(state << STATE_SHIFT) + i];
-}
-
-/* This function applies the given value to a save-state variable.
-   Higher positions mean earlier states.  By default the function sets
-   the current state of the save-state variable. */
-void integrator::setState (int state, nr_double_t val, int n) {
-  int i = (n + currentstate) & STATE_MASK;
-  stateval[(state << STATE_SHIFT) + i] = val;
-}
-
-// Shifts one state forward.
-void integrator::nextState (void) {
-  if (--currentstate < 0) currentstate = STATE_NUM - 1;
-}
-
-// Shifts one state backward.
-void integrator::prevState (void) {
-  currentstate = (currentstate + 1) & STATE_MASK;
-}
-
-/* This function applies the given value to a save-state variable through
-   all history values. */
-void integrator::fillState (int state, nr_double_t val) {
-  nr_double_t * p = &stateval[state << STATE_SHIFT];
-  for (int i = 0; i < STATE_NUM; i++) *p++ = val;
 }
